basic text to speech working

--- a/tts-server/src/main/resources/static/index.html
+++ b/tts-server/src/main/resources/static/index.html
@@ -2,7 +2,8 @@
 <html ng-app="app">
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
+        <script src="js.vendor/angular.min.js"></script>
+        <script src="js.vendor/axios.min.js"></script>
         <script src="index.js"></script>
         <script src="components/navbar/navbar.js"></script>
         <script src="components/page-header/page-header.js"></script>
