--- a/tts-server/src/main/resources/static/index.html
+++ b/tts-server/src/main/resources/static/index.html
@@ -9,6 +9,20 @@
     <body>
         <div class="container-fluid">
             <div id="message"></div>
+            <div id="waveFilePanel" class="panel panel-info">
+                <div class="panel-heading">
+                    <h2 class="panel-title pull-left">Wave File</h2>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="panel-body">
+                    <div id="waveFileAudioDropIn" class="container-fluid">
+                        <audio src="wave.files/1555361926633.wav" controls></audio>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div id="message"></div>
             <div id="textEntryPanel" class="panel panel-info">
                 <div class="panel-heading">
                     <h2 class="panel-title pull-left">Run Server-Side Shell Command</h2>
